--- a/4Redis/Introduction.ipynb
+++ b/4Redis/Introduction.ipynb
@@ -154,113 +154,174 @@
     {
      "data": {
       "text/plain": [
-       "{'dbfilename': 'dump.rdb',\n",
-       " 'requirepass': '',\n",
-       " 'masterauth': '',\n",
-       " 'cluster-announce-ip': '',\n",
-       " 'unixsocket': '',\n",
-       " 'logfile': '',\n",
-       " 'pidfile': '',\n",
-       " 'slave-announce-ip': '',\n",
-       " 'replica-announce-ip': '',\n",
-       " 'maxmemory': '0',\n",
-       " 'proto-max-bulk-len': '536870912',\n",
-       " 'client-query-buffer-limit': '1073741824',\n",
-       " 'maxmemory-samples': '5',\n",
-       " 'lfu-log-factor': '10',\n",
-       " 'lfu-decay-time': '1',\n",
-       " 'timeout': '0',\n",
-       " 'active-defrag-threshold-lower': '10',\n",
-       " 'active-defrag-threshold-upper': '100',\n",
-       " 'active-defrag-ignore-bytes': '104857600',\n",
-       " 'active-defrag-cycle-min': '5',\n",
-       " 'active-defrag-cycle-max': '75',\n",
-       " 'active-defrag-max-scan-fields': '1000',\n",
-       " 'auto-aof-rewrite-percentage': '100',\n",
-       " 'auto-aof-rewrite-min-size': '67108864',\n",
-       " 'hash-max-ziplist-entries': '512',\n",
-       " 'hash-max-ziplist-value': '64',\n",
-       " 'stream-node-max-bytes': '4096',\n",
-       " 'stream-node-max-entries': '100',\n",
-       " 'list-max-ziplist-size': '-2',\n",
-       " 'list-compress-depth': '0',\n",
-       " 'set-max-intset-entries': '512',\n",
-       " 'zset-max-ziplist-entries': '128',\n",
-       " 'zset-max-ziplist-value': '64',\n",
-       " 'hll-sparse-max-bytes': '3000',\n",
-       " 'lua-time-limit': '5000',\n",
-       " 'slowlog-log-slower-than': '10000',\n",
-       " 'latency-monitor-threshold': '0',\n",
-       " 'slowlog-max-len': '128',\n",
-       " 'port': '6379',\n",
-       " 'cluster-announce-port': '0',\n",
-       " 'cluster-announce-bus-port': '0',\n",
-       " 'tcp-backlog': '511',\n",
-       " 'databases': '16',\n",
-       " 'repl-ping-slave-period': '10',\n",
-       " 'repl-ping-replica-period': '10',\n",
-       " 'repl-timeout': '60',\n",
-       " 'repl-backlog-size': '1048576',\n",
-       " 'repl-backlog-ttl': '3600',\n",
-       " 'maxclients': '10000',\n",
-       " 'watchdog-period': '0',\n",
-       " 'slave-priority': '100',\n",
-       " 'replica-priority': '100',\n",
-       " 'slave-announce-port': '0',\n",
-       " 'replica-announce-port': '0',\n",
-       " 'min-slaves-to-write': '0',\n",
-       " 'min-replicas-to-write': '0',\n",
-       " 'min-slaves-max-lag': '10',\n",
-       " 'min-replicas-max-lag': '10',\n",
-       " 'hz': '10',\n",
-       " 'cluster-node-timeout': '15000',\n",
-       " 'cluster-migration-barrier': '1',\n",
-       " 'cluster-slave-validity-factor': '10',\n",
-       " 'cluster-replica-validity-factor': '10',\n",
-       " 'repl-diskless-sync-delay': '5',\n",
-       " 'tcp-keepalive': '300',\n",
-       " 'cluster-require-full-coverage': 'yes',\n",
-       " 'cluster-slave-no-failover': 'no',\n",
-       " 'cluster-replica-no-failover': 'no',\n",
-       " 'no-appendfsync-on-rewrite': 'no',\n",
-       " 'slave-serve-stale-data': 'yes',\n",
-       " 'replica-serve-stale-data': 'yes',\n",
-       " 'slave-read-only': 'yes',\n",
-       " 'replica-read-only': 'yes',\n",
-       " 'slave-ignore-maxmemory': 'yes',\n",
-       " 'replica-ignore-maxmemory': 'yes',\n",
-       " 'stop-writes-on-bgsave-error': 'yes',\n",
+       "{'rdbchecksum': 'yes',\n",
        " 'daemonize': 'no',\n",
-       " 'rdbcompression': 'yes',\n",
-       " 'rdbchecksum': 'yes',\n",
-       " 'activerehashing': 'yes',\n",
-       " 'activedefrag': 'no',\n",
+       " 'io-threads-do-reads': 'no',\n",
+       " 'lua-replicate-commands': 'yes',\n",
+       " 'always-show-logo': 'no',\n",
        " 'protected-mode': 'no',\n",
-       " 'repl-disable-tcp-nodelay': 'no',\n",
-       " 'repl-diskless-sync': 'no',\n",
-       " 'aof-rewrite-incremental-fsync': 'yes',\n",
-       " 'rdb-save-incremental-fsync': 'yes',\n",
-       " 'aof-load-truncated': 'yes',\n",
-       " 'aof-use-rdb-preamble': 'yes',\n",
+       " 'rdbcompression': 'yes',\n",
+       " 'rdb-del-sync-files': 'no',\n",
+       " 'activerehashing': 'yes',\n",
+       " 'stop-writes-on-bgsave-error': 'yes',\n",
+       " 'set-proc-title': 'yes',\n",
+       " 'dynamic-hz': 'yes',\n",
        " 'lazyfree-lazy-eviction': 'no',\n",
        " 'lazyfree-lazy-expire': 'no',\n",
        " 'lazyfree-lazy-server-del': 'no',\n",
-       " 'slave-lazy-flush': 'no',\n",
+       " 'lazyfree-lazy-user-del': 'no',\n",
+       " 'lazyfree-lazy-user-flush': 'no',\n",
+       " 'repl-disable-tcp-nodelay': 'no',\n",
+       " 'repl-diskless-sync': 'no',\n",
+       " 'gopher-enabled': 'no',\n",
+       " 'aof-rewrite-incremental-fsync': 'yes',\n",
+       " 'no-appendfsync-on-rewrite': 'no',\n",
+       " 'cluster-require-full-coverage': 'yes',\n",
+       " 'rdb-save-incremental-fsync': 'yes',\n",
+       " 'aof-load-truncated': 'yes',\n",
+       " 'aof-use-rdb-preamble': 'yes',\n",
+       " 'cluster-replica-no-failover': 'no',\n",
+       " 'cluster-slave-no-failover': 'no',\n",
        " 'replica-lazy-flush': 'no',\n",
-       " 'dynamic-hz': 'yes',\n",
-       " 'maxmemory-policy': 'noeviction',\n",
-       " 'loglevel': 'notice',\n",
-       " 'supervised': 'no',\n",
-       " 'appendfsync': 'everysec',\n",
-       " 'syslog-facility': 'local0',\n",
+       " 'slave-lazy-flush': 'no',\n",
+       " 'replica-serve-stale-data': 'yes',\n",
+       " 'slave-serve-stale-data': 'yes',\n",
+       " 'replica-read-only': 'yes',\n",
+       " 'slave-read-only': 'yes',\n",
+       " 'replica-ignore-maxmemory': 'yes',\n",
+       " 'slave-ignore-maxmemory': 'yes',\n",
+       " 'jemalloc-bg-thread': 'yes',\n",
+       " 'activedefrag': 'no',\n",
+       " 'syslog-enabled': 'no',\n",
+       " 'cluster-enabled': 'no',\n",
        " 'appendonly': 'no',\n",
+       " 'cluster-allow-reads-when-down': 'no',\n",
+       " 'crash-log-enabled': 'yes',\n",
+       " 'crash-memcheck-enabled': 'yes',\n",
+       " 'use-exit-on-panic': 'no',\n",
+       " 'disable-thp': 'yes',\n",
+       " 'cluster-allow-replica-migration': 'yes',\n",
+       " 'replica-announced': 'yes',\n",
+       " 'aclfile': '',\n",
+       " 'unixsocket': '',\n",
+       " 'pidfile': '',\n",
+       " 'replica-announce-ip': '',\n",
+       " 'slave-announce-ip': '',\n",
+       " 'masteruser': '',\n",
+       " 'cluster-announce-ip': '',\n",
+       " 'syslog-ident': 'redis',\n",
+       " 'dbfilename': 'dump.rdb',\n",
+       " 'appendfilename': 'appendonly.aof',\n",
+       " 'server_cpulist': '',\n",
+       " 'bio_cpulist': '',\n",
+       " 'aof_rewrite_cpulist': '',\n",
+       " 'bgsave_cpulist': '',\n",
+       " 'ignore-warnings': '',\n",
+       " 'proc-title-template': '{title} {listen-addr} {server-mode}',\n",
+       " 'masterauth': '',\n",
+       " 'requirepass': '',\n",
+       " 'supervised': 'no',\n",
+       " 'syslog-facility': 'local0',\n",
+       " 'repl-diskless-load': 'disabled',\n",
+       " 'loglevel': 'notice',\n",
+       " 'maxmemory-policy': 'noeviction',\n",
+       " 'appendfsync': 'everysec',\n",
+       " 'oom-score-adj': 'no',\n",
+       " 'acl-pubsub-default': 'allchannels',\n",
+       " 'sanitize-dump-payload': 'no',\n",
+       " 'databases': '16',\n",
+       " 'port': '6379',\n",
+       " 'io-threads': '1',\n",
+       " 'auto-aof-rewrite-percentage': '100',\n",
+       " 'cluster-replica-validity-factor': '10',\n",
+       " 'cluster-slave-validity-factor': '10',\n",
+       " 'list-max-ziplist-size': '-2',\n",
+       " 'tcp-keepalive': '300',\n",
+       " 'cluster-migration-barrier': '1',\n",
+       " 'active-defrag-cycle-min': '1',\n",
+       " 'active-defrag-cycle-max': '25',\n",
+       " 'active-defrag-threshold-lower': '10',\n",
+       " 'active-defrag-threshold-upper': '100',\n",
+       " 'lfu-log-factor': '10',\n",
+       " 'lfu-decay-time': '1',\n",
+       " 'replica-priority': '100',\n",
+       " 'slave-priority': '100',\n",
+       " 'repl-diskless-sync-delay': '5',\n",
+       " 'maxmemory-samples': '5',\n",
+       " 'maxmemory-eviction-tenacity': '10',\n",
+       " 'timeout': '0',\n",
+       " 'replica-announce-port': '0',\n",
+       " 'slave-announce-port': '0',\n",
+       " 'tcp-backlog': '511',\n",
+       " 'cluster-announce-bus-port': '0',\n",
+       " 'cluster-announce-port': '0',\n",
+       " 'cluster-announce-tls-port': '0',\n",
+       " 'repl-timeout': '60',\n",
+       " 'repl-ping-replica-period': '10',\n",
+       " 'repl-ping-slave-period': '10',\n",
+       " 'list-compress-depth': '0',\n",
+       " 'rdb-key-save-delay': '0',\n",
+       " 'key-load-delay': '0',\n",
+       " 'active-expire-effort': '1',\n",
+       " 'hz': '10',\n",
+       " 'min-replicas-to-write': '0',\n",
+       " 'min-slaves-to-write': '0',\n",
+       " 'min-replicas-max-lag': '10',\n",
+       " 'min-slaves-max-lag': '10',\n",
+       " 'maxclients': '10000',\n",
+       " 'active-defrag-max-scan-fields': '1000',\n",
+       " 'slowlog-max-len': '128',\n",
+       " 'acllog-max-len': '128',\n",
+       " 'lua-time-limit': '5000',\n",
+       " 'cluster-node-timeout': '15000',\n",
+       " 'slowlog-log-slower-than': '10000',\n",
+       " 'latency-monitor-threshold': '0',\n",
+       " 'proto-max-bulk-len': '536870912',\n",
+       " 'stream-node-max-entries': '100',\n",
+       " 'repl-backlog-size': '1048576',\n",
+       " 'maxmemory': '0',\n",
+       " 'hash-max-ziplist-entries': '512',\n",
+       " 'set-max-intset-entries': '512',\n",
+       " 'zset-max-ziplist-entries': '128',\n",
+       " 'active-defrag-ignore-bytes': '104857600',\n",
+       " 'hash-max-ziplist-value': '64',\n",
+       " 'stream-node-max-bytes': '4096',\n",
+       " 'zset-max-ziplist-value': '64',\n",
+       " 'hll-sparse-max-bytes': '3000',\n",
+       " 'tracking-table-max-keys': '1000000',\n",
+       " 'client-query-buffer-limit': '1073741824',\n",
+       " 'repl-backlog-ttl': '3600',\n",
+       " 'auto-aof-rewrite-min-size': '67108864',\n",
+       " 'tls-port': '0',\n",
+       " 'tls-session-cache-size': '20480',\n",
+       " 'tls-session-cache-timeout': '300',\n",
+       " 'tls-cluster': 'no',\n",
+       " 'tls-replication': 'no',\n",
+       " 'tls-auth-clients': 'yes',\n",
+       " 'tls-prefer-server-ciphers': 'no',\n",
+       " 'tls-session-caching': 'yes',\n",
+       " 'tls-cert-file': '',\n",
+       " 'tls-key-file': '',\n",
+       " 'tls-key-file-pass': '',\n",
+       " 'tls-client-cert-file': '',\n",
+       " 'tls-client-key-file': '',\n",
+       " 'tls-client-key-file-pass': '',\n",
+       " 'tls-dh-params-file': '',\n",
+       " 'tls-ca-cert-file': '',\n",
+       " 'tls-ca-cert-dir': '',\n",
+       " 'tls-protocols': '',\n",
+       " 'tls-ciphers': '',\n",
+       " 'tls-ciphersuites': '',\n",
+       " 'logfile': '',\n",
+       " 'watchdog-period': '0',\n",
        " 'dir': '/data',\n",
        " 'save': '3600 1 300 100 60 10000',\n",
        " 'client-output-buffer-limit': 'normal 0 0 0 slave 268435456 67108864 60 pubsub 33554432 8388608 60',\n",
        " 'unixsocketperm': '0',\n",
        " 'slaveof': '',\n",
        " 'notify-keyspace-events': '',\n",
-       " 'bind': ''}"
+       " 'bind': '',\n",
+       " 'oom-score-adj-values': '0 200 800'}"
       ]
      },
      "execution_count": 4,
@@ -376,7 +437,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-d24c9190de66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mredis_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKEY\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mVALUE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Les valeurs ne correspondent pas\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/tmp/ipykernel_15/3167113908.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mredis_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mKEY\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mVALUE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Les valeurs ne correspondent pas\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m: Les valeurs ne correspondent pas"
      ]
     }
@@ -1222,7 +1283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1236,7 +1297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.12"
   },
   "varInspector": {
    "cols": {
